kubernetes/#old/minikube/react_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: react
  name: react
spec:
  replicas: 1
  selector:
    matchLabels:
      run: react
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: react
    spec:
      containers:
        - env:
            - name: REACT_APP_REST_API_ENDPOINT
              value: "http://192.168.99.103" # Ingressで作成されたIPアドレスを入力
          image: kambe/minikubereact:1.0
          name: react
          ports:
            - containerPort: 3000
          resources: {}
status: {}
