kubernetes/#old/minikube/db_statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-clusterip ## この名前がk8s内のDNS名として登録されます。
  labels:
    app: mysql-sts
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
      name: mysql
  clusterIP: None ## 特徴① ヘッドレスサービスを設定
  selector:
    app: mysql-sts ## 後続のステートフルセットと関連づけるラベル
---
## MySQL ステートフルセット
#
apiVersion: apps/v1 ## ステートフルセット参照
kind: StatefulSet
metadata:
  name: mysql
spec: ## 表2 ステートフルセットの仕様
  serviceName: mysql-clusterip ## 特徴② 連携するサービス名を設定
  replicas: 1 ## ポッド起動数
  selector:
    matchLabels:
      app: mysql-sts
  template: ## 表3 ポッドテンプレートの仕様
    metadata:
      labels:
        app: mysql-sts
    spec:
      containers:
        - env:
            # 環境変数の名前を定義
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  # ConfigMapの名前を指定
                  name: my-config
                  # ConfigMapのKeyを指定
                  key: MYSQL_ROOT_PASSWORD
            - name: MYSQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  name: my-config
                  key: DATABASE_DB
            - name: MYSQL_USER
              valueFrom:
                configMapKeyRef:
                  name: my-config
                  key: DATABASE_USER
            - name: MYSQL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  name: my-config
                  key: DATABASE_PASSWORD
            - name: TZ
              valueFrom:
                configMapKeyRef:
                  name: my-config
                  key: TZ
          image: mysql:5.7
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          resources: {}
          # volumeは今後の課題、そもそもデプロイメントではなくステートフルセット
          args:
            - mysqld
            - --character-set-server=utf8
            - --collation-server=utf8_unicode_ci
          volumeMounts: ## 特徴③コンテナ上のマウントポイント設定
            - name: pvc
              mountPath: /var/lib/mysql
              subPath: data ## 初期化時に空ディレクトリが必要なため
          livenessProbe: ## MySQL稼働チェック
            exec:
              command: ["mysqladmin", "-p$MYSQL_ROOT_PASSWORD", "ping"]
            initialDelaySeconds: 60
            timeoutSeconds: 10
  volumeClaimTemplates: ## 特徴④ボリューム要求テンプレート
    - metadata:
        name: pvc
      spec: ## 表4 永続ボリューム要求の雛形
        accessModes: ["ReadWriteOnce"]
        ## 環境に合わせて選択して、storageの値を編集
        #storageClassName: ibmc-file-bronze   # 容量 20Gi IKS
        #storageClassName: gluster-heketi     # 容量 12Gi GlusterFS
        storageClassName: standard # 容量 2Gi  Minikube/GKE
        resources:
          requests:
            storage: 2Gi
